--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@ parameters:
     app_locales: en|nl|nl_NL|nl_BE|es|fr|de|pl|it|pt_BR
     app.notifications.email_sender: anonymous@example.com
     doctrine.orm.entity_manager.class: Bolt\Doctrine\TranslatableEntityManager
+    bolt.table_prefix: bolt_
 
 services:
     # default configuration for services in *this* file
@@ -57,3 +58,8 @@ services:
             -
                 method: addService
                 arguments: [ 'select', '@Bolt\Storage\Query\SelectQuery' ]
+
+    Bolt\Doctrine\TablePrefix:
+        arguments: [ "%bolt.table_prefix%" ]
+        tags:
+            - { name: doctrine.event_listener, event: loadClassMetadata, lazy: true }
