--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,16 +8,16 @@
          bootstrap="vendor/autoload.php"
 >
     <php>
-        <ini name="error_reporting" value="-1" />
-        <env name="KERNEL_CLASS" value="Bolt\Kernel" />
-        <env name="APP_ENV" value="test"/>
-        <env name="APP_DEBUG" value="1"/>
+        <ini name="error_reporting" value="-1" force="true"/>
+        <env name="KERNEL_CLASS" value="Bolt\Kernel"/>
+        <env name="APP_ENV" value="test" force="true"/>
+        <env name="APP_DEBUG" value="1" force="true"/>
         <env name="APP_SECRET" value="5a79a1c866efef9ca1800f971d689f3e"/>
         <env name="SYMFONY_PHPUNIT_VERSION" value="7.1"/>
         <!-- define your env variables for the test env here -->
 
         <!-- ###+ doctrine/doctrine-bundle ### -->
-        <env name="DATABASE_URL" value="sqlite:///%kernel.project_dir%/var/data/bolt-test.sqlite"/>
+        <env name="DATABASE_URL" value="sqlite:///%kernel.project_dir%/var/data/bolt-test.sqlite" force="true"/>
         <!-- ###- doctrine/doctrine-bundle ### -->
 
         <!-- ###+ symfony/swiftmailer-bundle ### -->
