--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=7.1.3",
         "ext-json": "*",
-        "api-platform/core": "^2.1",
+        "api-platform/core": "^2.4@beta",
         "bolt/common": "^2.0",
         "cocur/slugify": "^3.1",
         "doctrine/annotations": "^1.0",
