Enable Blackfire performance testing on Docker

--- a/.env.dist
+++ b/.env.dist
@@ -35,3 +35,10 @@ MAILER_URL=null://localhost
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
+
+# blackfire access tokens for performance measurement
+BLACKFIRE_CLIENT_ID=
+BLACKFIRE_CLIENT_TOKEN=
+BLACKFIRE_SERVER_ID=
+BLACKFIRE_SERVER_TOKEN=
+BLACKFIRE_LOG_LEVEL=0
