--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -73,6 +73,14 @@ RUN extBuildDeps=" \
     mkdir -p /root/.ssh/ && \
     ssh-keyscan github.com >> /root/.ssh/known_hosts
 
+RUN version=$(php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;") \
+    && curl -A "Docker" -o /tmp/blackfire-probe.tar.gz -D - -L -s https://blackfire.io/api/v1/releases/probe/php/linux/amd64/$version \
+    && mkdir -p /tmp/blackfire \
+    && tar zxpf /tmp/blackfire-probe.tar.gz -C /tmp/blackfire \
+    && mv /tmp/blackfire/blackfire-*.so $(php -r "echo ini_get('extension_dir');")/blackfire.so \
+    && printf "extension=blackfire.so\nblackfire.agent_socket=tcp://blackfire:8707\n" > $PHP_INI_DIR/conf.d/blackfire.ini \
+    && rm -rf /tmp/blackfire /tmp/blackfire-probe.tar.gz
+
 EXPOSE 9000
 COPY confd/ /etc/confd/
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
