--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -10,6 +10,8 @@ translation:
     edit_in_place:
         enabled: false
         config_name: app
+    auto_add_missing_translations:
+        config_name: 'app'
     configs:
         app:
             dirs: ["%kernel.project_dir%/templates", "%kernel.project_dir%/src"]
