Working on translations

--- a/.env.dist
+++ b/.env.dist
@@ -42,3 +42,7 @@ BLACKFIRE_CLIENT_TOKEN=
 BLACKFIRE_SERVER_ID=
 BLACKFIRE_SERVER_TOKEN=
 BLACKFIRE_LOG_LEVEL=0
+
+###> php-translation/loco-adapter ###
+LOCO_PROJECT_API_KEY=
+###< php-translation/loco-adapter ###
