--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -27,6 +27,10 @@
         <!-- ###+ nelmio/cors-bundle ### -->
         <env name="CORS_ALLOW_ORIGIN" value="^https?://localhost(:[0-9]+)?$"/>
         <!-- ###- nelmio/cors-bundle ### -->
+
+        <!-- ###+ php-translation/loco-adapter ### -->
+        <env name="LOCO_PROJECT_API_KEY" value=""/>
+        <!-- ###- php-translation/loco-adapter ### -->
     </php>
 
     <testsuites>
