--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
         "miljar/php-exif": "^0.6.4",
         "nelmio/cors-bundle": "^1.5",
         "nesbot/carbon": "^1.34",
+        "php-http/httplug-pack": "^1.1",
+        "php-translation/loco-adapter": "^0.8.0",
         "php-translation/symfony-bundle": "^0.8",
         "phpdocumentor/reflection-docblock": "^4.2",
         "sensio/framework-extra-bundle": "^5.1",
