--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -10,11 +10,18 @@ translation:
     edit_in_place:
         enabled: false
         config_name: app
-    auto_add_missing_translations:
-        config_name: 'app'
     configs:
         app:
             dirs: ["%kernel.project_dir%/templates", "%kernel.project_dir%/src"]
             output_dir: "%kernel.project_dir%/translations"
             excluded_names: ["*TestCase.php", "*Test.php"]
             excluded_dirs: [cache, data, logs]
+            remote_storage: ["php_translation.adapter.loco"]
+
+# php_translation_adapter_loco_adapter
+translation_adapter_loco:
+    index_parameter: 'id' # 'text' or 'name'. Leave blank for "auto"  See https://localise.biz/api/docs/export/exportlocale
+    projects:
+        my_project:
+            api_key: '%env(LOCO_PROJECT_API_KEY)%'
+            domains: ['messages']
