Fix "Unused binding" breakage introduced in SF 4.2.3

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,7 +19,8 @@ services:
                             # The best practice is to be explicit about your dependencies anyway.
         bind:               # defines the scalar arguments once and apply them to any service defined/created in this file
             $locales: '%app_locales%'
-            $defaultLocale: '%locale%'
+            # @todo: This breaks, starting with SF 4.2.3. Check if needed, and if so, fix properly.
+            # $defaultLocale: '%locale%'
             $emailSender: '%app.notifications.email_sender%'
             $projectDir: '%kernel.project_dir%'
 
