--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "simplemde": "^1.11.2",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-scss": "^3.5.1",
-    "terser": "^3.14.1",
+    "terser": "3.14.1",
     "tinycolor2": "^1.4.1",
     "vue": "^2.5.22",
     "vue-flatpickr-component": "^8.1.1",
