--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,7 @@
 security:
     encoders:
-        Bolt\Entity\User: bcrypt
+        Bolt\Entity\User:
+            algorithm: argon2i
 
     providers:
         database_users:
@@ -33,5 +34,6 @@ security:
         # this is a catch-all for the admin area
         # additional security lives in the controllers
         # @todo make admin area prefix configurable
-        # - { path: '^/bolt', roles: ROLE_ADMIN }
+        - { path: '^/bolt/(login|resetpassword)$', roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: '^/bolt', roles: ROLE_ADMIN }
         - { path: '^/(%app_locales%)/bolt', roles: ROLE_ADMIN }
