revert argon2i back to bcrypt

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,6 @@
 security:
     encoders:
-        Bolt\Entity\User:
-            algorithm: argon2i
+        Bolt\Entity\User: bcrypt
 
     providers:
         database_users:
