--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": ">=7.1.3",
         "ext-json": "*",
+        "ext-pdo": "*",
         "api-platform/core": "^2.4@beta",
         "bolt/common": "^2.0",
         "cocur/slugify": "^3.1",
@@ -67,6 +68,8 @@
         "php-translation/loco-adapter": "^0.8.0",
         "phpspec/phpspec": "^5.1",
         "phpstan/phpstan": "^0.11",
+        "phpstan/phpstan-doctrine": "^0.11.0",
+        "phpstan/phpstan-symfony": "^0.11.0",
         "phpunit/phpunit": "^7.0",
         "roave/security-advisories": "dev-master@dev",
         "symfony/browser-kit": "^4.2",
