--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,10 @@
 parameters:
     tmpDir: var/cache/ecs
     level: 5
+    symfony:
+        container_xml_path: '%rootDir%/../../../var/cache/dev/srcBolt_KernelDevDebugContainer.xml'
 
 includes:
+	- vendor/phpstan/phpstan-symfony/extension.neon
+	- vendor/phpstan/phpstan-doctrine/extension.neon
 #    - vendor/thecodingmachine/phpstan-safe-rule/phpstan-safe-rule.neon # make ON when thecodingmachine/safe will get stable
