--- a/config/packages/prod/doctrine.yaml
+++ b/config/packages/prod/doctrine.yaml
@@ -2,6 +2,7 @@ doctrine:
     dbal:
         driver: 'pdo_mysql'
         charset: utf8mb4
+        server_version: 5.6
         url: '%env(DATABASE_URL)%'
 
     orm:
