--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,17 @@ appveyor.yml
 /var/cache/*
 !/var/cache/.gitkeep
 /var/log/*
-!/var/log/.gitkeep
+!/var/log/*.gitkeep
+/var/log/e2e-reports/*
+!/var/log/e2e-reports/
+/var/log/e2e-reports/performance/*
+!/var/log/e2e-reports/performance/
 !/var/log/e2e-reports/performance/.gitkeep
+/var/log/e2e-reports/report/*
+!/var/log/e2e-reports/report/
 !/var/log/e2e-reports/report/.gitkeep
+/var/log/behat-reports/*
+!/var/log/behat-reports/
 !/var/log/behat-reports/.gitkeep
 /var/data/*
 !/var/data/.gitkeep
