--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "ezyang/htmlpurifier": "^4.10",
         "fzaninotto/faker": "^1.8",
         "guzzlehttp/guzzle": "^6.3",
+        "illuminate/support": "^5.7",
         "knplabs/knp-menu-bundle": "^2.0",
         "league/glide-symfony": "^1.0",
         "miljar/php-exif": "^0.6.4",
@@ -49,7 +50,6 @@
         "symfony/var-dumper": "^4.2",
         "symfony/webpack-encore-bundle": "^1.0",
         "symfony/yaml": "^4.2",
-        "tightenco/collect": "^5.7",
         "twig/extensions": "^1.5",
         "webmozart/path-util": "^2.3",
         "webonyx/graphql-php": "^0.13",
