--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.1.3",
         "ext-json": "*",
         "ext-pdo": "*",
+        "ext-mbstring": "*",
         "api-platform/core": "^2.4@beta",
         "bolt/common": "^2.0",
         "cocur/slugify": "^3.1",
@@ -55,6 +56,7 @@
     },
     "require-dev": {
         "ext-pdo_sqlite": "*",
+        "ext-curl": "*",
         "behat/behat": "^3.5",
         "behat/mink": "dev-master@dev",
         "behat/mink-extension": "^2.3",
@@ -125,7 +127,8 @@
         ]
     },
     "conflict": {
-        "symfony/symfony": "*"
+        "symfony/symfony": "*",
+        "illuminate/support": "*"
     },
     "extra": {
         "symfony": {
