--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "ext-json": "*",
         "ext-pdo": "*",
         "ext-mbstring": "*",
-        "api-platform/core": "^2.4@beta",
+        "api-platform/core": "v2.4.0-beta.1",
         "bolt/common": "^2.0",
         "cocur/slugify": "^3.1",
         "doctrine/annotations": "^1.0",
