--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
   include:
     - php: 7.1
     - php: 7.2
+    - php: 7.2
+      env: COMPOSER_FLAGS="--prefer-lowest"
     - php: 7.3
     - php: nightly
       env: COMPOSER_FLAGS="--ignore-platform-reqs"
@@ -22,10 +24,10 @@ matrix:
 
 before_install:
   - mv ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini{,.disabled} || echo "xdebug not available"
-  - composer self-update
+  - composer self-update -q
 
 install:
-  - COMPOSER_MEMORY_LIMIT=-1 composer install $COMPOSER_FLAGS
+  - COMPOSER_MEMORY_LIMIT=-1 composer update $COMPOSER_FLAGS
   - nvm install 8.2
   - npm install
   - cd tests/e2e && npm install && node ./node_modules/protractor/bin/webdriver-manager update --gecko=false && cd ../..
