--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "cocur/slugify": "^3.1",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^1.7",
+        "doctrine/doctrine-cache-bundle": "^1.3.1",
         "doctrine/doctrine-migrations-bundle": "^1.3",
         "doctrine/orm": "^2.5.11",
         "easycorp/easy-log-handler": "^1.0.7",
