--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "ext-pdo": "*",
         "ext-mbstring": "*",
         "api-platform/core": "^2.4@beta",
-        "bolt/common": "^2.0",
+        "bolt/common": "^2.0.2",
         "cocur/slugify": "^3.1",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^1.8",
@@ -33,6 +33,7 @@
         "sensiolabs/security-checker": "^5.0",
         "siriusphp/upload": "^2.1",
         "stof/doctrine-extensions-bundle": "^1.3",
+        "gedmo/doctrine-extensions": "^2.4.4",
         "symfony/asset": "^4.2",
         "symfony/console": "^4.2",
         "symfony/expression-language": "^4.2",
@@ -54,7 +55,7 @@
         "twig/extensions": "^1.5",
         "webmozart/path-util": "^2.3",
         "webonyx/graphql-php": "^0.13",
-        "white-october/pagerfanta-bundle": "^1.1"
+        "white-october/pagerfanta-bundle": "^1.2"
     },
     "require-dev": {
         "ext-pdo_sqlite": "*",
@@ -66,11 +67,12 @@
         "behatch/contexts": "^3.2",
         "coduo/php-matcher": "dev-feature/array-universal-key@dev",
         "dama/doctrine-test-bundle": "^5.0",
-        "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "lakion/mink-debug-extension": "^1.2",
         "php-http/httplug-pack": "^1.1",
         "php-translation/loco-adapter": "^0.8.0",
         "phpspec/phpspec": "^5.1",
+        "phpspec/prophecy": "^1.8",
         "phpstan/phpstan": "^0.11",
         "phpstan/phpstan-doctrine": "^0.11.0",
         "phpstan/phpstan-symfony": "^0.11.0",
@@ -84,7 +86,7 @@
         "symfony/stopwatch": "^4.2",
         "symfony/web-profiler-bundle": "^4.2",
         "symfony/web-server-bundle": "^4.2",
-        "symplify/easy-coding-standard": "^5.2"
+        "symplify/easy-coding-standard": "^5.4.6"
     },
     "repositories": [
         { "type": "vcs", "url": "https://github.com/jarjak/php-matcher", "no-api": true }
@@ -131,7 +133,7 @@
     "conflict": {
         "symfony/symfony": "*",
         "illuminate/support": "*",
-        "api-platform/core": "v2.4.0-beta.2"
+        "api-platform/core": "v2.4.0-beta.2, 2.4.x-dev, dev-2.4.x-dev, @dev"
     },
     "extra": {
         "symfony": {
