--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "nesbot/carbon": "^1.34",
         "php-translation/symfony-bundle": "^0.8",
         "phpdocumentor/reflection-docblock": "^4.2",
+        "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^5.0",
         "siriusphp/upload": "^2.1",
