--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "require": {
         "php": ">=7.1.3",
         "ext-json": "*",
-        "ext-pdo": "*",
         "ext-mbstring": "*",
+        "ext-pdo": "*",
         "api-platform/core": "^2.4@beta",
         "bolt/common": "^2.0",
         "cocur/slugify": "^3.1",
@@ -21,7 +21,6 @@
         "ezyang/htmlpurifier": "^4.10",
         "fzaninotto/faker": "^1.8",
         "guzzlehttp/guzzle": "^6.3",
-        "illuminate/support": "^5.7",
         "knplabs/knp-menu-bundle": "^2.0",
         "league/glide-symfony": "^1.0",
         "miljar/php-exif": "^0.6.4",
@@ -50,6 +49,7 @@
         "symfony/var-dumper": "^4.2",
         "symfony/webpack-encore-bundle": "^1.0",
         "symfony/yaml": "^4.2",
+        "tightenco/collect": "^5.7",
         "twig/extensions": "^1.5",
         "webmozart/path-util": "^2.3",
         "webonyx/graphql-php": "^0.13",
