--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "bolt",
-  "version": "4.0.0-alpha.0",
+  "version": "4.0.0-alpha.2",
   "homepage": "https://bolt.cm",
   "author": "Bob den Otter <bob@twokings.nl> (https://bolt.cm)",
   "license": "MIT",
-  "description": "Bolt 4.0.0 prototype",
+  "description": "Bolt 4 npm/javascript packages",
   "keywords": [
     "bolt",
     "cms",
@@ -28,63 +28,63 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "@vue/cli-service": "^3.3.0",
+    "@vue/cli-service": "^3.4.1",
     "axios": "^0.18.0",
     "baguettebox.js": "^1.11.0",
-    "bootstrap": "^4.2.1",
-    "codemirror": "^5.43.0",
+    "bootstrap": "^4.3.1",
+    "codemirror": "^5.44.0",
     "flagpack": "^1.0.3",
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
     "no-scroll": "^2.1.1",
     "popper.js": "^1.14.7",
-    "register-service-worker": "^1.5.2",
+    "register-service-worker": "^1.6.2",
     "simplemde": "^1.11.2",
     "stylelint-config-recommended-scss": "^3.2.0",
-    "stylelint-scss": "^3.5.1",
-    "terser": "3.14.1",
+    "stylelint-scss": "^3.5.4",
+    "terser": "^3.16.1",
     "tinycolor2": "^1.4.1",
-    "vue": "^2.5.22",
+    "vue": "^2.6.7",
     "vue-flatpickr-component": "^8.1.1",
     "vue-multiselect": "^2.1.3",
-    "vue-notification": "^1.3.15",
+    "vue-notification": "^1.3.16",
     "vue-simplemde": "^0.5.1",
     "vue-trumbowyg": "^3.4.1",
-    "vuedraggable": "^2.17.0",
+    "vuedraggable": "^2.18.1",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-transform-regenerator": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-transform-regenerator": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
     "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.1",
-    "@symfony/webpack-encore": "^0.22.4",
+    "@babel/preset-env": "^7.3.4",
+    "@symfony/webpack-encore": "^0.23.0",
     "@vue/test-utils": "^1.0.0-beta.29",
-    "ajv-keywords": "^3.3.0",
-    "autoprefixer": "^9.4.6",
+    "ajv-keywords": "^3.4.0",
+    "autoprefixer": "^9.4.9",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
-    "eslint": "5.12.0",
-    "eslint-config-prettier": "^3.6.0",
+    "eslint": "^5.14.1",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.1.0",
+    "eslint-plugin-vue": "^5.2.2",
     "jest": "^24.1.0",
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
-    "prettier": "1.15.3",
+    "prettier": "^1.16.4",
     "regenerator-runtime": "^0.13.1",
     "sass-loader": "^7.1.0",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
-    "vue-jest": "^3.0.2",
-    "vue-loader": "^15.6.1",
+    "vue-jest": "^3.0.3",
+    "vue-loader": "^15.6.4",
     "vue-router": "^3.0.2",
-    "vue-template-compiler": "^2.5.22",
+    "vue-template-compiler": "^2.6.7",
     "webpackbar": "^3.1.5",
     "workbox-webpack-plugin": "^3.6.3"
   },
