another composer fixes

--- a/composer.json
+++ b/composer.json
@@ -36,14 +36,17 @@
         "gedmo/doctrine-extensions": "^2.4.4",
         "symfony/asset": "^4.2",
         "symfony/console": "^4.2",
+        "symfony/dependency-injection": "^4.2",
         "symfony/expression-language": "^4.2",
-        "symfony/flex": "^1.1",
+        "symfony/flex": "^1.2",
         "symfony/form": "^4.2",
         "symfony/framework-bundle": "^4.2",
-        "symfony/monolog-bundle": "^3.0",
+        "symfony/monolog-bridge": "^4.1",
+        "symfony/monolog-bundle": "^3.3",
         "symfony/polyfill-php72": "^1.8",
         "symfony/security-bundle": "^4.2",
         "symfony/serializer": "^4.2",
+        "symfony/stopwatch": "^4.2",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "^4.2",
         "symfony/twig-bundle": "^4.2",
@@ -83,7 +86,6 @@
         "symfony/debug-bundle": "^4.2",
         "symfony/dotenv": "^4.2",
         "symfony/maker-bundle": "^1.11",
-        "symfony/stopwatch": "^4.2",
         "symfony/web-profiler-bundle": "^4.2",
         "symfony/web-server-bundle": "^4.2",
         "symplify/easy-coding-standard": "^5.4.6"
