--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,16 @@ matrix:
   fast_finish: true
   include:
     - php: 7.1
-    - php: 7.2
-    - php: 7.2
+    - php: 7.1
       env: COMPOSER_FLAGS="--prefer-lowest"
+    - php: 7.2
     - php: 7.3
     - php: nightly
       env: COMPOSER_FLAGS="--ignore-platform-reqs"
   allow_failures:
     - php: nightly
+    - php: 7.1
+      env: COMPOSER_FLAGS="--prefer-lowest"
 
 before_install:
   - mv ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini{,.disabled} || echo "xdebug not available"
