--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,7 @@
 twig:
     debug: '%kernel.debug%'
     strict_variables: true
+    autoescape: false
     form_themes:
         - 'form/layout.twig'
         - 'form/fields.twig'
