--- a/config/bolt/menu.yaml
+++ b/config/bolt/menu.yaml
@@ -3,7 +3,7 @@
 
 main:
     - label: Home
-      title: This is the first menu item.
+      title: This is the <b>first<b> menu item.
       link: homepage
       class: first
     - label: About
