Add e2e test for menu

--- a/config/bolt/menu.yaml
+++ b/config/bolt/menu.yaml
@@ -5,7 +5,7 @@ main:
     - label: Home
       title: This is the <b>first<b> menu item.
       link: homepage
-      class: first
+      class: homepage
     - label: About
       link: blocks/about
       submenu:
@@ -23,7 +23,7 @@ main:
       link: pages/
     - label: The Bolt site
       link: https://bolt.cm
-      class: last
+      class: bolt-site
       title: Visit the excellent Bolt website!
       
 foo: bar
