--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -19,7 +19,7 @@ frontend:
 # Place your own routes here, that have a LOWER priority than the default routes.
 
 api_entrypoint:
-  path: /bolt/api # moved to admin area firewall
+  path: '%bolt.backend_url%/api'
   controller: api_platform.swagger.action.ui
 
 # ------------------------------------------------------------------------------
@@ -27,11 +27,11 @@ api_entrypoint:
 # to modify the `prefix` so the Control Panel can be accessed at a custom URL.
 control_panel_async:
   resource: '../src/Controller/Backend/Async'
-  prefix: /bolt/async # @todo make admin area prefix configurable
+  prefix: '%bolt.backend_url%/async'
 
 control_panel:
   resource: '../src/Controller/Backend/'
-  prefix: /bolt # @todo make admin area prefix configurable
+  prefix: '%bolt.backend_url%'
 
 # ------------------------------------------------------------------------------
 # Examples:
