Extracting (and caching) menus

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,7 +39,7 @@ services:
         tags:
             - { name: doctrine.event_listener, event: postLoad }
 
-    Bolt\Menu\MenuBuilder:
+    Bolt\Menu\BackendMenuBuilder:
         arguments: ["@knp_menu.factory"]
         tags:
             - { name: knp_menu.menu_builder, method: createSidebarMenu, alias: sidebar } # The alias is what is used to retrieve the menu
