--- a/composer.json
+++ b/composer.json
@@ -8,32 +8,34 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-pdo": "*",
-        "api-platform/core": "v2.4.0-beta.1",
+        "api-platform/core": "^2.4.2",
         "bolt/common": "^2.0.2",
-        "cocur/slugify": "^3.1",
-        "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^1.8",
+        "cocur/slugify": "^3.2",
+        "doctrine/annotations": "^1.6",
+        "doctrine/doctrine-bundle": "^1.10",
         "doctrine/doctrine-cache-bundle": "^1.3.1",
         "doctrine/doctrine-migrations-bundle": "^1.3",
-        "doctrine/orm": "^2.5.11",
+        "doctrine/orm": "^2.6.3",
         "easycorp/easy-log-handler": "^1.0.7",
         "embed/embed": "^3.3",
         "erusev/parsedown": "^1.7",
         "ezyang/htmlpurifier": "^4.10",
         "fzaninotto/faker": "^1.8",
+        "gedmo/doctrine-extensions": "^2.4.37",
         "guzzlehttp/guzzle": "^6.3",
-        "knplabs/knp-menu-bundle": "^2.0",
+        "knplabs/knp-menu-bundle": "^2.2",
         "league/glide-symfony": "^1.0",
         "miljar/php-exif": "^0.6.4",
         "nelmio/cors-bundle": "^1.5",
-        "nesbot/carbon": "^1.34",
+        "nesbot/carbon": "^1.36",
+        "nette/robot-loader": "v3.1.1",
+        "php-http/httplug-pack": "1.1.0",
         "php-translation/symfony-bundle": "^0.8",
-        "phpdocumentor/reflection-docblock": "^4.2",
+        "phpdocumentor/reflection-docblock": "^4.3",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^5.0",
         "siriusphp/upload": "^2.1",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "gedmo/doctrine-extensions": "^2.4.4",
         "symfony/asset": "^4.2",
         "symfony/console": "^4.2",
         "symfony/dependency-injection": "^4.2",
@@ -52,9 +54,9 @@
         "symfony/twig-bundle": "^4.2",
         "symfony/validator": "^4.2",
         "symfony/var-dumper": "^4.2",
-        "symfony/webpack-encore-bundle": "^1.0",
+        "symfony/webpack-encore-bundle": "^1.5",
         "symfony/yaml": "^4.2",
-        "tightenco/collect": "^5.7",
+        "tightenco/collect": "^5.8",
         "twig/extensions": "^1.5",
         "webmozart/path-util": "^2.3",
         "webonyx/graphql-php": "^0.13",
@@ -68,18 +70,17 @@
         "behat/mink-extension": "^2.3",
         "behat/mink-goutte-driver": "^1.2",
         "behatch/contexts": "^3.2",
-        "coduo/php-matcher": "dev-feature/array-universal-key@dev",
+        "coduo/php-matcher": "^3.1.2",
         "dama/doctrine-test-bundle": "^5.0",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "lakion/mink-debug-extension": "^1.2",
-        "php-http/httplug-pack": "^1.1",
         "php-translation/loco-adapter": "^0.8.0",
         "phpspec/phpspec": "^5.1",
         "phpspec/prophecy": "^1.8",
         "phpstan/phpstan": "^0.11",
         "phpstan/phpstan-doctrine": "^0.11.0",
         "phpstan/phpstan-symfony": "^0.11.0",
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^7.5",
         "roave/security-advisories": "dev-master@dev",
         "symfony/browser-kit": "^4.2",
         "symfony/css-selector": "^4.2",
@@ -88,11 +89,8 @@
         "symfony/maker-bundle": "^1.11",
         "symfony/web-profiler-bundle": "^4.2",
         "symfony/web-server-bundle": "^4.2",
-        "symplify/easy-coding-standard": "^5.4.6"
+        "symplify/easy-coding-standard": "^5.4.16"
     },
-    "repositories": [
-        { "type": "vcs", "url": "https://github.com/jarjak/php-matcher", "no-api": true }
-    ],
     "minimum-stability": "stable",
     "prefer-stable": true,
     "config": {
