--- a/composer.json
+++ b/composer.json
@@ -131,9 +131,7 @@
         ]
     },
     "conflict": {
-        "symfony/symfony": "*",
-        "api-platform/core": "v2.4.0-beta.2",
-        "symplify/coding-standard": "5.4.13"
+        "symfony/symfony": "*"
     },
     "extra": {
         "symfony": {
