--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         "behat/mink-extension": "^2.3",
         "behat/mink-goutte-driver": "^1.2",
         "behatch/contexts": "^3.2",
-        "coduo/php-matcher": "^3.1.2",
+        "coduo/php-matcher": "dev-patch-2@dev",
         "dama/doctrine-test-bundle": "^5.0",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "lakion/mink-debug-extension": "^1.2",
@@ -89,6 +89,9 @@
         "symfony/web-server-bundle": "^4.2",
         "symplify/easy-coding-standard": "^5.4.14"
     },
+    "repositories": [
+        { "type": "vcs", "url": "https://github.com/jarjak/php-matcher", "no-api": true }
+    ],
     "minimum-stability": "stable",
     "prefer-stable": true,
     "config": {
