Clarify pinning of PHP 7.1.18 in Travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ cache:
 matrix:
   fast_finish: true
   include:
+    # Pinned to 7.1.18, because Travis defaults to 7.1.6, which has broken SSL/TLS. See: https://github.com/travis-ci/travis-ci/issues/6339
     - php: 7.1.18
-    - php: 7.1
+    - php: 7.1.18
       env: COMPOSER_FLAGS="--prefer-lowest"
     - php: 7.2
     - php: 7.3
@@ -21,7 +22,7 @@ matrix:
       env: COMPOSER_FLAGS="--ignore-platform-reqs"
   allow_failures:
     - php: nightly
-    - php: 7.1
+    - php: 7.1.18
       env: COMPOSER_FLAGS="--prefer-lowest"
 
 before_install:
