--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
     "url": "git://github.com/bolt/four.git"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.0",
-    "@vue/cli-service": "^3.5.3",
+    "@babel/polyfill": "^7.4.3",
+    "@vue/cli-service": "^3.6.0",
     "axios": "^0.18.0",
     "baguettebox.js": "^1.11.0",
     "bootstrap": "^4.3.1",
     "codemirror": "^5.45.0",
     "flagpack": "^1.0.3",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "moment": "^2.24.0",
     "no-scroll": "^2.1.1",
-    "popper.js": "^1.14.7",
+    "popper.js": "^1.15.0",
     "register-service-worker": "^1.6.2",
     "simplemde": "^1.11.2",
-    "stylelint-config-recommended-scss": "^3.2.0",
-    "stylelint-scss": "^3.5.4",
+    "stylelint-config-recommended-scss": "^3.3.0",
+    "stylelint-scss": "^3.6.0",
     "terser": "^3.17.0",
     "tinycolor2": "^1.4.1",
     "vue": "^2.6.10",
@@ -54,43 +54,44 @@
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/plugin-transform-regenerator": "^7.4.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/polyfill": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@symfony/webpack-encore": "^0.26.0",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-regenerator": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@symfony/webpack-encore": "^0.27.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "ajv-keywords": "^3.4.0",
-    "autoprefixer": "^9.5.0",
+    "autoprefixer": "^9.5.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.5.0",
-    "eslint": "^5.15.3",
+    "babel-jest": "^24.7.1",
+    "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.2",
-    "jest": "^24.5.0",
+    "jest": "^24.7.1",
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
-    "prettier": "^1.16.4",
+    "prettier": "^1.17.0",
     "regenerator-runtime": "^0.13.2",
     "sass-loader": "^7.1.0",
-    "stylelint": "^9.10.1",
-    "stylelint-config-standard": "^18.2.0",
+    "stylelint": "^10.0.1",
+    "stylelint-config-standard": "^18.3.0",
     "vue-jest": "^3.0.4",
     "vue-loader": "^15.7.0",
-    "vue-router": "^3.0.2",
+    "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.6.10",
-    "webpackbar": "^3.1.5",
-    "workbox-webpack-plugin": "^4.1.1"
+    "webpackbar": "^3.2.0",
+    "workbox-webpack-plugin": "^4.3.0"
   },
   "scripts": {
     "start": "encore dev-server --port=8234 --progress --disable-host-check --verbose",
     "build": "encore production --progress",
+    "build:stats": "encore production --progress --json > webpack_stats.json",
     "serve": "encore dev --watch",
     "lint": "eslint --ext .js,.vue, assets",
     "lint-fix": "eslint --ext .js,.vue, assets --fix",
