--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -7,3 +7,5 @@ twig:
     paths:
         '%kernel.project_dir%/public/theme/%bolt.theme%': ''
         '%kernel.project_dir%/templates/': 'bolt'
+    globals:
+        'config': '@Bolt\Configuration\Config'
