--- a/tests/fixtures/config/minimal_content_types.yaml
+++ b/tests/fixtures/config/minimal_content_types.yaml
@@ -9,3 +9,8 @@ qux:
   slug: corges
   singular_slug: corge
   fields: []
+
+# Infer fields, and determine both the `slug` and `name` get inferred from the key
+grault:
+  singular_name: Waldo
+  fields: []
