--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/cli-service": "^3.8.0",
     "axios": "^0.18.0",
     "baguettebox.js": "^1.11.0",
+    "bootbox": "^5.1.3",
     "bootstrap": "^4.3.1",
     "codemirror": "^5.47.0",
     "flagpack": "^1.0.3",
